updates to docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,4 @@ Author: Steven Riley
 Maintainer: Steven Riley <sr@stevenriley.net>
 Description: More about what it does (maybe more than one line)
 License: GPL-3
+RoxygenNote: 6.0.1
