--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,6 @@ Maintainer: Steven Riley <sr@stevenriley.net>
 Description: More about what it does (maybe more than one line)
 License: GPL-3
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
