plotting incidence for forecasting practical

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Maintainer: Steven Riley <sr@stevenriley.net>
 Description: More about what it does (maybe more than one line)
 License: GPL-3
 RoxygenNote: 6.0.1
+Imports:
+    ggplot2
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
