--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,16 @@
 
 export(calc_log_likelihood)
 export(extract_forecasted_points)
+export(extract_forecasted_points_seir)
 export(extract_incidence)
+export(extract_week_index)
+export(fit_seir)
+export(likelihood_profile_seir)
 export(linear_regression)
 export(plot_incidence)
-export(simple_comp_seir)
+export(plot_likelihood_profile)
+export(solve_seir_model)
+export(solve_seir_wrapper)
 export(subset_incidence_data)
 import(ggplot2)
+importFrom(deSolve,ode)
