--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(fit_seir)
 export(likelihood_profile_seir)
 export(linear_regression)
 export(plot_incidence)
+export(plot_incidence_all)
 export(plot_likelihood_profile)
 export(solve_seir_model)
 export(solve_seir_wrapper)
