exporting some non forecast functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(extract_week_index)
 export(fit_seir)
 export(likelihood_profile_seir)
 export(linear_regression)
+export(pdf_fig_proof)
 export(plot_incidence)
 export(plot_incidence_all)
 export(plot_likelihood_profile)
