Addint LAIV cohort functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(plot_likelihood_profile)
 export(solve_seir_model)
 export(solve_seir_wrapper)
 export(subset_incidence_data)
+export(laiv_cohort)
 import(ggplot2)
 importFrom(deSolve,ode)
