--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,9 @@ export(solve_seir_model)
 export(solve_seir_wrapper)
 export(subset_incidence_data)
 export(laiv_cohort)
+export(cov_branch)
+export(cov_chains)
+export(cov_clusters)
+export(cov_hybrid)
 import(ggplot2)
 importFrom(deSolve,ode)
