Adding in covid sitrep heat charts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,7 @@ export(cov_branch)
 export(cov_chains)
 export(cov_clusters)
 export(cov_hybrid)
+export(cov_sitrep_tab)
+export(cov_sitrep_image)
 import(ggplot2)
 importFrom(deSolve,ode)
