Adding function to load UK dashboard data for covid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 export(calc_log_likelihood)
 export(calc_prediction_accuracy)
+export(cov_branch)
+export(cov_clusters)
+export(cov_sc)
+export(cov_sitrep_image)
 export(extract_incidence)
 export(extract_predicted_points)
 export(extract_predicted_points_seir)
@@ -10,18 +14,12 @@ export(extract_week_index)
 export(fit_seir)
 export(likelihood_profile_seir)
 export(linear_regression)
+export(load_uk_cov_data)
 export(plot_incidence)
 export(plot_incidence_all)
 export(plot_likelihood_profile)
 export(solve_seir_model)
 export(solve_seir_wrapper)
 export(subset_incidence_data)
-export(laiv_cohort)
-export(cov_branch)
-export(cov_chains)
-export(cov_clusters)
-export(cov_hybrid)
-export(cov_sitrep_tab)
-export(cov_sitrep_image)
 import(ggplot2)
 importFrom(deSolve,ode)
