Fixing some minor documentation issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calc_log_likelihood)
 export(calc_prediction_accuracy)
 export(cov_branch)
 export(cov_clusters)
+export(cov_hybrid)
 export(cov_sc)
 export(cov_sitrep_image)
 export(extract_incidence)
