--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ export(plot_likelihood_profile)
 export(solve_seir_model)
 export(solve_seir_wrapper)
 export(subset_incidence_data)
+export(zika_invasion)
 import(ggplot2)
 importFrom(deSolve,ode)
