--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,12 @@ Date: 2015-07-24
 Authors@R: as.person(c("Steven Riley <sr@stevenriley.net> [aut, cre]","Caroline Walters <c.e.walters6@gmail.com> [aut]","Ada Yan <ada.w.yan@gmail.com> [aut]"))
 Description: More about what it does (maybe more than one line)
 License: GPL-3
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Imports:
     ggplot2,
     deSolve
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    shape
 VignetteBuilder: knitr
 Encoding: UTF-8
