--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(ind_tau)
 export(likelihood_profile_seir)
 export(linear_regression)
 export(load_uk_cov_data)
+export(pdf_fig_proof)
 export(plot_incidence)
 export(plot_incidence_all)
 export(plot_likelihood_profile)
