--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     deSolve
 Suggests: knitr,
     rmarkdown,
-    shape
+    shape,
+    dplyr
 VignetteBuilder: knitr
 Encoding: UTF-8
 Depends: R (>= 2.10)
